fix: align footer to bottom

--- a/src/stylesheets/footer.scss
+++ b/src/stylesheets/footer.scss
@@ -1,7 +1,16 @@
 @import './variables.scss';
 
+html {
+    height: 100%;
+}
+
+.content {
+    min-height: calc(100vh - 80px);
+}
+
 footer {
     margin-top: 30px;
+    height: 50px;
     padding: 10px 0;
     font-size: 14px;
     text-align: center;
